# SocialWebApp

./: .gitignore  pyproject.toml
app/: main.py
app/auth/: constants.py  exceptions.py  jwt.py  router.py  schemas.py  services.py
app/comments/: models.py  router.py  schemas.py  services.py
app/config/: config.py  database.py  dependencies.py
app/core/: exceptions.py
app/files/: router.py  services.py
app/posts/: constants.py  exceptions.py  models.py  router.py  schemas.py  services.py
app/users/: constants.py  exceptions.py  models.py  router.py  schemas.py  services.py
src/: config.py  database.py  dependencies.py  main.py
src/auth/: security.py
src/users/: models.py  router.py  schemas.py  services.py
tests/: conftest.py
tests/tests_auth/: test_router.py
tests/tests_posts/: test_router.py
tests/tests_users/: services.py  test_router.py
